--- a/configure.ac
+++ b/configure.ac
@@ -4,8 +4,8 @@ dnl     This file is an input file used by the GNU "autoconf" program to
 dnl     generate the file "configure", which is run during the build
 dnl     to configure the system for the local environment.
 
-AC_INIT
-AM_INIT_AUTOMAKE(fcgi, 2.4.0)
+AC_INIT(libfcgi, 2.4.0)
+AM_INIT_AUTOMAKE
 
 AM_CONFIG_HEADER(fcgi_config.h)
 
